fix gap between flex portlet items

--- a/Products/ContentWellPortlets/browser/styles/ContentWellPortlets.css
+++ b/Products/ContentWellPortlets/browser/styles/ContentWellPortlets.css
@@ -24,29 +24,24 @@
     margin-top: 0.5rem;
 }
 
-.contentwellportlets.row > div{
+.contentwellportlets.row > div {
     min-height: 0;
     min-width: 0;
     }
 
-.contentwellportlets.row{
+.contentwellportlets.row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: normal;
-    align-content: normal; 
-    /* margin: auto 0; */
-    --gap: 0.2em;
-    margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap));
-    width: calc(100% + var(--gap));
-    
+    align-items: flex-start;
+    align-content: space-around; 
+    column-gap: 1rem;
 }
 
-.contentwellportlets.row div{
+.contentwellportlets.row .cell{
     flex-grow: 1;
-    --gap: 0.2em;
-   margin: var(--gap) 0 0 var(--gap);
+
 }
 
 /* This prevent the pollution of CWP portlet managers in the manage-portlet toolbar menu'*/
